--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "email-template-testing",
+  "name": "email-template-system",
   "version": "1.0.0",
-  "description": "Email template testing with Mailtrap SMTP",
-  "main": "test-email.js",
+  "description": "SendScript Email Template System with Mailtrap Integration",
+  "main": "src/server/server-example.js",
   "scripts": {
-    "test": "node test-email.js",
-    "test-all": "node test-all-templates.js",
-    "individual": "node individual-email-trigger.js",
-    "send-test": "node test-email.js",
-    "server": "node server-example.js",
-    "start": "node server-example.js"
+    "start": "node src/server/server-example.js",
+    "test-all": "node src/scripts/test-all-templates.js",
+    "individual": "node src/scripts/individual-email-trigger.js",
+    "test-email": "node src/scripts/test-email.js"
   },
+  "keywords": ["email", "templates", "sendscript", "mailtrap", "smtp"],
+  "author": "SendScript Team",
+  "license": "MIT",
   "dependencies": {
     "nodemailer": "^6.9.7",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "readline-sync": "^1.4.10",
+    "dotenv": "^16.3.1"
   },
-  "keywords": ["email", "template", "mailtrap", "smtp", "testing"],
-  "author": "",
-  "license": "MIT"
+  "devDependencies": {},
+  "engines": {
+    "node": ">=14.0.0"
+  }
 } 
